--- a/src/app/pages/admistration/admin/admin.css
+++ b/src/app/pages/admistration/admin/admin.css
@@ -14,6 +14,7 @@
             display: grid;
             grid-template-columns: 250px 1fr;
             max-height: 100%;
+            min-height: 100%;
         }
 
 
