--- a/src/app/pages/propertiesPages/properties/properties.html
+++ b/src/app/pages/propertiesPages/properties/properties.html
@@ -54,7 +54,7 @@
           </div>
           <p>{{p.description}}</p>
           <div class="card-footer">
-            <div class="price">{{p.price}}</div>
+            <div class="price">${{p.price}}</div>
             <div class="features">
               <div class="feature">
                 <svg width="20" height="20" fill="#0d9e6d" viewBox="0 0 20 20">
